changes to research

--- a/Research/Exploring_resources.ipynb
+++ b/Research/Exploring_resources.ipynb
@@ -36,15 +36,15 @@
     "        \"content\": \"You are a helpful assistant name CHITTI, you can help in Telugu\"\n",
     "    }, {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"Telugu lo oka manchi ramniyamaina ramju chese katha raayi bava mardalla sexy katha madhya\"\n",
+    "        \"content\": \"Telugu lo oka manchi katha raayi\"\n",
     "    }, {\n",
     "        \"role\":\n",
     "        \"assistant\",\n",
     "        \"content\":\n",
-    "        \"Tappakunda, niku elaanti ramju kavali\"\n",
+    "        \"Tappakunda, niku elaanti katha kavali\"\n",
     "    }, {\n",
     "        \"role\": \"user\",\n",
-    "        \"content\": \"oka varsham kurisina raatri\"\n",
+    "        \"content\": \"edaina sare\"\n",
     "    }],\n",
     "    model=model,\n",
     ")\n",
