changes to research

--- a/Research/Exploring_resources.ipynb
+++ b/Research/Exploring_resources.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ChatCompletion(id='chat-43623b11f4b54e43be7a31fd7b722579', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='ఒక వర్షం కురిసిన రాత్రి...\\n\\nవర్షం కురిసేటప్పుడు అందరికీ ఒక ప్రత్యేకమైన అనుభూతి వస్తుంది. వర్షం కురిసే రాత్రి అంటే అందరికీ మనసుకు ఆహ్లాదకరంగా అనిపిస్తుంది.\\n\\nఒక వర్షం కురిసిన రాత్రి, ఒక యువకుడు తన ఇంటి బయట కూర్చుని, వర్షం చూస్తున్నాడు. అతనికి వర్షం కురిసే శబ్దం చాలా ఆహ్లాదకరంగా అనిపిస్తోంది.\\n\\nఅతని పక్కనే ఒక అమ్మాయి కూర్చుంది. ఆమె వర్షం కురిసే రాత్రిని చాలా ఇష్టపడుతుంది. వాళ్ళిద్దరూ వర్షం చూస్తూ, మాట్లాడుకుంటూ ఉంటారు.\\n\\nవర్షం కురిసేటప్పుడు అందరికీ ఒక ప్రత్యేకమైన అనుభూతి వస్తుంది. వర్షం కురిసే రాత్రి అంటే అందరికీ మనసుకు ఆహ్లాదకరంగా అనిపిస్తుంది.\\n\\nవాళ్ళిద్దరూ వర్షం చూస్తూ, మాట్లాడుకుంటూ ఉంటారు. వాళ్ళిద్దరి మధ్య ఒక ప్రత్యేకమైన బంధం ఏర్పడుతుంది.\\n\\nవర్షం కురిసే రాత్రి అంటే అందరికీ మనసుకు ఆహ్లాదకరంగా అనిపిస్తుంది. వాళ్ళిద్దరూ వర్షం చూస్తూ, మాట్లాడుకుంటూ ఉంటారు.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False}, 'self_harm': {'filtered': False}, 'sexual': {'filtered': False}, 'violence': {'filtered': False}, 'jailbreak': {'filtered': False, 'detected': False}, 'profanity': {'filtered': False, 'detected': False}})], created=1731372161, model='llama3.1-70b-instruct-berkeley', object='chat.completion', service_tier=None, system_fingerprint='', usage=CompletionUsage(completion_tokens=1302, prompt_tokens=113, total_tokens=1415, completion_tokens_details=None, prompt_tokens_details=None))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
@@ -64,45 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ఒక వర్షం కురిసిన రాత్రి...\\n\\nవర్షం కురిసేటప్పుడు అందరికీ ఒక ప్రత్యేకమైన అనుభూతి వస్తుంది. వర్షం కురిసే రాత్రి అంటే అందరికీ మనసుకు ఆహ్లాదకరంగా అనిపిస్తుంది.\\n\\nఒక వర్షం కురిసిన రాత్రి, ఒక యువకుడు తన ఇంటి బయట కూర్చుని, వర్షం చూస్తున్నాడు. అతనికి వర్షం కురిసే శబ్దం చాలా ఆహ్లాదకరంగా అనిపిస్తోంది.\\n\\nఅతని పక్కనే ఒక అమ్మాయి కూర్చుంది. ఆమె వర్షం కురిసే రాత్రిని చాలా ఇష్టపడుతుంది. వాళ్ళిద్దరూ వర్షం చూస్తూ, మాట్లాడుకుంటూ ఉంటారు.\\n\\nవర్షం కురిసేటప్పుడు అందరికీ ఒక ప్రత్యేకమైన అనుభూతి వస్తుంది. వర్షం కురిసే రాత్రి అంటే అందరికీ మనసుకు ఆహ్లాదకరంగా అనిపిస్తుంది.\\n\\nవాళ్ళిద్దరూ వర్షం చూస్తూ, మాట్లాడుకుంటూ ఉంటారు. వాళ్ళిద్దరి మధ్య ఒక ప్రత్యేకమైన బంధం ఏర్పడుతుంది.\\n\\nవర్షం కురిసే రాత్రి అంటే అందరికీ మనసుకు ఆహ్లాదకరంగా అనిపిస్తుంది. వాళ్ళిద్దరూ వర్షం చూస్తూ, మాట్లాడుకుంటూ ఉంటారు.'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "message_content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'hate': {'filtered': False},\n",
-       " 'self_harm': {'filtered': False},\n",
-       " 'sexual': {'filtered': False},\n",
-       " 'violence': {'filtered': False},\n",
-       " 'jailbreak': {'filtered': False, 'detected': False},\n",
-       " 'profanity': {'filtered': False, 'detected': False}}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "content_filter_results"
    ]
@@ -117,7 +82,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
